--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "taccsite_custom"]
-	path = taccsite_custom
-	url = git@github.com:TACC/Core-CMS-Resources.git
-	branch = task/37-per-site-assets
+  path = taccsite_custom
+	url = https://github.com/TACC/cms-site-resources.git
